# build-bridge

./: .gitignore  CLAUDE.md  README.md  app.py  app_config.py  database.py  main.py  models.py  p4sync.py  pyproject.toml  requirements.txt  vcsmanager.py
.github/workflows/: build-deploy-itch.yml  jekyll-gh-pages.yml
alembic/: env.py
alembic/versions/: 1b6154ba883e_add_game_config_field.py  58e32512480d_initial_baseline.py  9ee7c83a755f_add_maps_json_field.py  a1a341861dd8_initial_baseline.py  a1b2c3d4e5f6_build_model_refactor.py  a5f0ec84c4d2_itch_models.py  b34d93bf8a1f_add_steam_playtest_fields.py  c7a8d9e0f1a2_one_publish_profile_per_target_store.py  d64c311412a5_initial_baseline.py  d80d983d9759_replace_game_config_with_target.py  dca64d720639_add_engine_path_to_build_target.py  e3f4a5b6c7d8_add_app_state_active_project.py  ea01e881bea9_add_archive_dir_to_build_target.py  f0c70761b718_initial_migration.py
build_bridge/: README.md  app.py  database.py  exceptions.py  log.py  models.py  pyproject.toml  requirements.txt
build_bridge/core/: builds.py  preflight.py  projects.py
build_bridge/style/: app_style.py
build_bridge/tests/: conftest.py  test_build_deletion.py  test_build_model.py  test_preflight.py  test_utils.py  (+2 more)
builder/: build_dialog.py  buildlist_widget.py  unreal_builder.py
conf/: config_manager.py
dialogs/: build_dialog.py  connection_dialog.py  publish_dialog.py  settings.py  settings_dialog.py  steam_upload_dialog.py
docs/: Gemfile  _config.yml  index.md
models/: build_target.py  project.py
publisher/: base_publisher.py  publisher_factory.py  steam_config.json
retry/: retry.py
tests/: conftest.py  test_unreal_builder.py
utils/: paths.py
vcs/: p4client.py  vcsbase.py
widgets/: buildlist_widget.py
(+59 files in other folders)
