[project]
name = "buildbridge"
version = "0.1.0"
description = "Automate Unreal project builds and publishing to marketplaces"
authors = [
    {name = "Fabrizio Scandola",email = "collederas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "altgraph (==0.17.4)",
    "p4python (==2024.2.2682690)",
    "packaging (==24.2)",
    "pefile (==2023.2.7)",
    "pyinstaller (==6.12.0)",
    "pyinstaller-hooks-contrib (==2025.2)",
    "pyqt6 (==6.8.1)",
    "pyqt6-qt6 (==6.8.2)",
    "pyqt6-sip (==13.10.0)",
    "pywin32-ctypes (==0.2.3)",
    "setuptools (==78.1.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
