[project]
name = "buildbridge"
version = "0.1.0"
description = "Automate Unreal project builds and publishing to marketplaces"
authors = [
    {name = "Fabrizio Scandola", email = "collederas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "p4python (>=2025.2)",
    "packaging (==24.2)",
    "pyqt6 (==6.8.1)",
    "pyqt6-qt6 (==6.8.2)",
    "pyqt6-sip (==13.10.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
altgraph = "0.17.4"
pefile = "2023.2.7"
pyinstaller = "6.20.0"
pywin32-ctypes = "0.2.3"
pytest = ">=8.3.5,<9.0.0"
